# Apprentissage_semi_supervise

./: README.md  pyproject.toml
data/processed/: df_labeled.csv
notebooks/: notebook_1_analyse_exploratoire.ipynb  notebook_2_pretraitement_donnees.ipynb  notebook_2_pretraitement_donnees_resnet18.ipynb  notebook_2_pretraitement_donnees_restnet50.ipynb  notebook_3_analyse_non_supervisee.ipynb  notebook_3_analyse_non_supervisee_resnet18.ipynb  notebook_3_analyse_non_supervisee_resnet50.ipynb  notebook_4_modelisation_semi_supervisee.ipynb
